# docket

./: .gitignore  README.md  app.go  db.go  docker-compose.yml  docket.sqlite3  go.mod  go.sum  main.go  metadata.go  scanner.go  storage.go  vdb.go
adapters/: s3.go  weaviate.go
cmd/: main.go
crawler/: Dockerfile  app.go  db.go  go.mod  go.sum  scanner.go  storage.go
crawler/adapters/: local.go  s3.go  tika.go  weaviate.go  weaviate_test.go
crawler/cmd/: main.go
crawler/db/: config.go  postgres.go
crawler/pkg/types/: document.go
docket-ui/: .gitignore  app.go  go.mod  go.sum  main.go  wails.json
docket-ui/frontend/: package.json  package.json.md5  pnpm-lock.yaml  vite.config.ts
docket-ui/frontend-old/: index.html  package.json  pnpm-lock.yaml
docket-ui/frontend-old/src/: App.vue
docket-ui/frontend-old/wailsjs/runtime/: runtime.d.ts
docket-ui/frontend/src/: App.vue  main.ts
docket-ui/frontend/src/assets/: base.css
docket-ui/frontend/src/components/: HomeComponent.vue
docket-ui/frontend/wailsjs/go/: models.ts
internal/: metadata.go
internal/db/: postgres.go  sqlite.go
internal/storages/: local.go  s3.go
metadata/: pyproject.toml
metadata/metadata/: main.py
metadata/metadata/extractors/: extractor.py
metadata/src/metadata/: config.py  main.py
metadata/src/metadata/database/: base.py  documents.py
metadata/src/metadata/extractors/: extractor.py  file_extractor_builder.py  pdf_extractor.py
notebooks/: Untitled-1.ipynb
pkg/types/: document.go  metadata.go
pkg/utils/: document.go  slice.go
(+2 files in other folders)
