[tool.poetry]
name = "metadata"
version = "0.1.0"
description = ""
authors = ["Cristian Marín <cm961224@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "^1.34.96"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "metadata.main:main"
