[project]
name = "metadata"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "camarin24", email = "cm961224@gmail.com" }]
dependencies = [
    "torch==2.2.2",
    "torchvision==0.17.2",
    "pydantic-settings>=2.2.1",
    "pydantic>=2.7.1",
    "SQLAlchemy>=2.0.30",
    "psycopg2-binary>=2.9.9",
    "unstructured[all-docs]>=0.13.7",
]
requires-python = "==3.9.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = true

[tool.pdm.scripts]
start.call = "metadata.main:main"
start.env_file = ".env"

[tool.pyright]
venvPath = ".venv"
venv = "."
